--- a/ibas.thirdpartyapp.service/.settings/org.eclipse.wst.common.component
+++ b/ibas.thirdpartyapp.service/.settings/org.eclipse.wst.common.component
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-  <wb-module deploy-name="ibas.thirdpartyapp.service-0.1.0">
+          
+    
+    <wb-module deploy-name="ibas.thirdpartyapp.service-0.1.0">
+                        
+        
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-    <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-    <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                    
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                    
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <dependent-module archiveName="ibas.thirdpartyapp-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.thirdpartyapp/ibas.thirdpartyapp">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="ibas.thirdpartyapp.webapi-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.thirdpartyapp.webapi/ibas.thirdpartyapp.webapi">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="ibas.thirdpartyapp.email-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.thirdpartyapp.email/ibas.thirdpartyapp.email">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="ibas.initialfantasy-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.initialfantasy/ibas.initialfantasy">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-    <property name="java-output-path" value="/ibas.thirdpartyapp.service/target/classes"/>
+                    
+        
+        <property name="java-output-path" value="/ibas.thirdpartyapp.service/target/classes"/>
+                        
+        
         <property name="context-root" value="ibas.thirdpartyapp.service"/>
+                        
+        
         <property name="component.exclusion.patterns" value="index.html,config.json,**/tsconfig*.json,**/*.map,**/*.ts,**/*.bat,**/*.sh,3rdparty/*.txt,3rdparty/ibas/**,3rdparty/openui5/**,3rdparty/shell/**,modules/**,test/**"/>
-  </wb-module>
+                  
+    
+    </wb-module>
+        
+
 </project-modules>
